--- a/src/app/core/map/map.component.scss
+++ b/src/app/core/map/map.component.scss
@@ -4,7 +4,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - #{$navBarTop});
+  min-height: $contentHeight;
 
   app-directory{
     background-color: transparent;
